@@ -47,7 +47,7 @@ public class DeviceSettingsPagerAdapter extends FragmentStateAdapter implements 
     public Fragment createFragment(int position) {
         Fragment f;
         try {
-            f = arr.get(position).newInstance();
+            f = arr.get(position).getDeclaredConstructor().newInstance();
         } catch (Exception x){
             f = new PlaceholderFragment();
         }
