@@ -35,7 +35,7 @@ public class ImportExportPageAdapter extends FragmentStateAdapter implements Pag
     public Fragment createFragment(int position) {
         Fragment f;
         try {
-            f = arr.get(position).newInstance();
+            f = arr.get(position).getDeclaredConstructor().newInstance();
         } catch (Exception x){
             f = new PlaceholderFragment();
         }
